* #13218: Bump version numbers for release 1.2.0

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@
 # SFLphone
 ################################################
 
+* 2012-08-10: 1.2.0 has been released
+
 * 2012-05-17: 1.1.0 has been released
 
 * 2011-11-18: 1.0.1 has been released
