--- a/daemon/README
+++ b/daemon/README
@@ -1,6 +1,6 @@
 COPYRIGHT NOTICE
 
-Copyright (C) 2004, 2005, 2006, 2008, 2009, 2010 Savoir-Faire Linux Inc.
+Copyright (C) 2004-2012 Savoir-Faire Linux Inc.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -71,29 +71,10 @@ http://www.savoirfairelinux.com/
 How to compile
 --------------
 
-# Install libav-0.7 and some encoder/decoder librairies
-sudo apt-get install libtheora-dev libvpx-dev libmp3lame-dev
-
-# x264 doesn't do releases, so grab the last snapshot of it
-wget ftp://ftp.videolan.org/pub/x264/snapshots/last_x264.tar.bz2
-tar -jxf last_x264.tar.bz2
-cd x264-snapshot...
-./configure --enable-shared --enable-pic
-make && sudo make install
-
-# get the libav-0.7 release
-wget http://libav.org/releases/libav-0.7.tar.gz
-tar xzf libav-0.7.tar.gz
-cd libav-0.7
-./configure --enable-libx264 --enable-gpl --enable-swscale --enable-libvpx --enable-libmp3lame --enable-pic --enable-libtheora
-make && sudo make install
-
 # Compile the PJSIP library
 cd libs/pjproject
 
-./autogen.sh
-./configure --disable-ilbc-codec && make clean && make dep && make
-sudo make install
+CFLAGS=-fPIC ./configure && make dep && make -j1
 
 If you already have installed a different version of
 pjsip on your system, you will most likely have some errors
@@ -107,17 +88,19 @@ Simply remove those files and run "make install" again.
 
 # Then the daemon
 cd ../..
-./autogen.sh --prefix=/usr --with-debug
+./autogen.sh
+./configure
 make
 sudo make install
 
 # And the GNOME client
 cd sflphone-client-gnome
-./autogen.sh --prefix=/usr --with-debug
+./autogen.sh
+./configure
 make
 sudo make install
 
- Done !
+Done !
 
 Free SIP/IAx2 accounts
 ---------------------
@@ -129,8 +112,6 @@ Registered to this kind of account, you will be able to test your headset by dia
 ECHO test
 --------
 Dial *100, on sip.sflphone.org
-
-
 
 
 Contributing to SFLPhone
