--- a/tools/build-system/launchpad/sflphone-client-gnome-video/debian/changelog
+++ b/tools/build-system/launchpad/sflphone-client-gnome-video/debian/changelog
@@ -1,4 +1,4 @@
-sflphone-client-gnome (1.1.0-rc20120607~ppa1~SYSTEM) SYSTEM; urgency=low
+sflphone-client-gnome-video (1.1.0-rc20120607~ppa1~SYSTEM) SYSTEM; urgency=low
 
     ** SNAPSHOT 1.1.0-rc20120607~ppa1~SYSTEM **
 
