--- a/tools/build-system/launchpad/sflphone-video/debian/changelog
+++ b/tools/build-system/launchpad/sflphone-video/debian/changelog
@@ -1,4 +1,4 @@
-sflphone-common-video (1.1.0-rc20120607~ppa1~SYSTEM) SYSTEM; urgency=low
+sflphone-video (1.1.0-rc20120607~ppa1~SYSTEM) SYSTEM; urgency=low
 
     ** SNAPSHOT 1.1.0-rc20120607~ppa1~SYSTEM **
 
