* #19246: build: bump version numbers for 1.2.2

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ################################################
 # SFLphone
 ################################################
+* 2012-01-08: 1.2.2 has been released
+
 * 2012-01-08: 1.2.1 has been released - Full annoucement here: http://sflphone.org/news/stable-version-121-released
 
 * 2012-08-10: 1.2.0 has been released
