--- a/daemon/src/dbus/README
+++ b/daemon/src/dbus/README
@@ -8,3 +8,5 @@ Examples:
 dbusxx-xml2cpp callmanager-introspec.xml --adaptor=callmanager-glue.h
 dbusxx-xml2cpp configurationmanager-introspec.xml --adaptor=configurationmanager-glue.h
 dbusxx-xml2cpp contactmanager-introspec.xml --adaptor=contactmanager-glue.h
+
+dbusxx-xml2cpp instance-introspec.xml --adaptor=instance-glue.h 
