--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@
 # SFLphone
 ################################################
 #
+* 2014-01-13: 1.3.0 has been released
+
 * 2013-06-11: 1.2.3 has been released
 
 * 2013-01-08: 1.2.2 has been released
